--- a/plugin.xml
+++ b/plugin.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <plugin xmlns="http://apache.org/cordova/ns/plugins/1.0"
-        id="org.apache.cordova.upload"
-        version="1.0.0">
+        id="cordova-plugin-uploadfile"
+        version="0.0.1">
     <name>UploadFile</name>
     <description>You can use the Upload File plugin to select device's photo and get the photo byte array</description>
     <author>Jack</author>
